--- a/BasicUIComponents/Base.lproj/Main.storyboard
+++ b/BasicUIComponents/Base.lproj/Main.storyboard
@@ -939,6 +939,26 @@
                                             <segue destination="R51-79-G9O" kind="show" id="FZf-Wx-aRF"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="DSv-rp-rb2" style="IBUITableViewCellStyleDefault" id="0mI-OG-PPi">
+                                        <rect key="frame" x="0.0" y="594" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0mI-OG-PPi" id="OVL-bI-EuZ">
+                                            <rect key="frame" x="0.0" y="0.0" width="384.5" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Odev4" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="DSv-rp-rb2">
+                                                    <rect key="frame" x="20" y="0.0" width="356.5" height="44"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="nbt-P2-JUH" kind="show" id="Nib-Mp-puz"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -1138,6 +1158,57 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OTy-Rh-g0q" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2897.1014492753625" y="-767.41071428571422"/>
+        </scene>
+        <!--Odev Collection View Controller-->
+        <scene sceneID="PO0-Ij-EhS">
+            <objects>
+                <viewController id="nbt-P2-JUH" customClass="OdevCollectionViewController" customModule="BasicUIComponents" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="IrY-0T-JtE">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="nlw-jP-Cjr">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="qI7-BX-n7g">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="GaK-e0-rp0">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Zi1-Xb-RKu">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="nbt-P2-JUH" id="U9V-jP-iIx"/>
+                                    <outlet property="delegate" destination="nbt-P2-JUH" id="J0F-QC-KVW"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="vfi-Mj-rd2"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="nlw-jP-Cjr" firstAttribute="top" secondItem="vfi-Mj-rd2" secondAttribute="top" id="Vm6-HE-mY7"/>
+                            <constraint firstItem="vfi-Mj-rd2" firstAttribute="bottom" secondItem="nlw-jP-Cjr" secondAttribute="bottom" id="iFw-E7-rcg"/>
+                            <constraint firstItem="vfi-Mj-rd2" firstAttribute="trailing" secondItem="nlw-jP-Cjr" secondAttribute="trailing" id="kPw-hs-qXv"/>
+                            <constraint firstItem="nlw-jP-Cjr" firstAttribute="leading" secondItem="vfi-Mj-rd2" secondAttribute="leading" id="vvX-dU-cZx"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="6Fb-w2-gCD"/>
+                    <connections>
+                        <outlet property="collectionView" destination="nlw-jP-Cjr" id="shn-yD-Fdj"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XwA-KA-RhA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2831" y="-81"/>
         </scene>
         <!--Core Data View Controller-->
         <scene sceneID="lSX-fn-0Ch">
